Added Home page container div + CSSto center landing page content.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
+/* -------------- GLOBAL ---------------- Mobile */
 .App {
   text-align: center;
 }
+
+.home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 100vh;
+  /* background-color: lightblue;  */
+}
+
 /*NavLink returns a standard <a> tag! so use <a> for styling*/
 a {
   color: black;
@@ -30,3 +41,7 @@ a {
 .inactive {
   background-color: gray;
 }
+
+/* ---------------- Tablet ------------------ */
+
+/* ---------------- Desktop ------------------ */
