--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 /* -------------- GLOBAL ---------------- Mobile */
+* {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 25px;
+}
+
 .App {
   text-align: center;
 }
@@ -11,15 +16,36 @@
   min-height: 100vh;
   /* background-color: lightblue;  */
 }
+.home-container h1 {
+  font-family: 'Bangers', cursive;
+  font-size: 60px;
+  color: #20a39e;
+}
 
+button {
+  border-radius: 3em;
+  border-color: #ef5b5b;
+  color: #111010;
+  background-color: #ffba49;
+  padding: 8px;
+  font-weight: bold;
+}
+
+.nav-button {
+  border-radius: 3em;
+  border-color: #ef5b5b;
+  color: #111010;
+  padding: 8px;
+  font-weight: bold;
+}
 /*NavLink returns a standard <a> tag! so use <a> for styling*/
 a {
-  color: black;
-  font-size: 15px;
+  font-size: 25px;
   cursor: pointer;
   margin: 0 15px;
+  font-weight: bold;
 }
-.link-div {
+nav {
   position: fixed;
   bottom: 25px;
   width: 100%;
@@ -42,6 +68,39 @@ a {
   background-color: gray;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.reset-button {
+  margin-left: 10px;
+  width: 150px;
+}
+
+.search-input {
+  margin: 0 5px 0 5px;
+  border-radius: 3em;
+  height: 45px;
+  padding-left: 5px;
+}
+
+fieldset {
+  width: 500px;
+  height: 100px;
+  border: 1px solid blue;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+
+.delete-image {
+  width: 20px;
+  height: auto;
+}
+#delete-button {
+  border-radius: 15px;
+  background-color: #e15d5d;
+}
 /* ---------------- Tablet ------------------ */
 
 /* ---------------- Desktop ------------------ */
