Add global CSS for input and button border-style to override the agent stylesheet of outset

--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,9 @@ button {
   background-color: #ffba49;
   padding: 8px;
   font-weight: bold;
+  border-style: solid;
+}
+
+input {
+  border-style: solid;
 }
