--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,11 +3,8 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  min-height: 100vh;
+  margin-top: 4em;
 }
-
-.home-container h1 {
-  font-family: 'Bangers', cursive;
-  font-size: 60px;
-  color: #20a39e;
+section {
+  border: 1px solid black;
 }
