--- a/src/components/JoinExistingList/JoinExistingList.css
+++ b/src/components/JoinExistingList/JoinExistingList.css
@@ -1,12 +1,16 @@
 .join-p {
-  font-size: 0.75em;
-  margin-top: 6em;
+  font-size: 0.8em;
+  margin-bottom: 10px;
+  margin-top: 2.5em;
+  color: #23001e;
+  font-weight: 600;
 }
 .join-container {
   position: relative;
-  border: 2px solid blue;
-  margin-top: 30px;
+  /* border: 2px solid blue; */
+  /* margin-top: 30px; */
 }
+
 .join-btn {
-  margin-top: 0.5em;
+  margin-top: 16px;
 }
