--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .App {
-  border-radius: 3.5%;
+  border-radius: 12px;
   text-align: center;
   margin: 3%;
   background: white;
@@ -38,5 +38,4 @@ h1 {
   font-size: 2em;
   margin-top: -1.8em;
   color: #20a39e;
-  /* border: 1px solid green; */
 }
