--- a/src/components/JoinExistingList/JoinExistingList.css
+++ b/src/components/JoinExistingList/JoinExistingList.css
@@ -1,4 +1,4 @@
-.join-p {
+/* .join-p {
   font-size: 0.8em;
   margin-bottom: 10px;
   margin-top: 2.5em;
@@ -11,4 +11,28 @@
 
 .join-btn {
   margin-top: 16px;
+} */
+
+.join-p {
+  font-size: 0.8em;
+  margin-bottom: 10px;
+  margin-top: 2.5em;
+  color: #23001e;
+  font-weight: 600;
+}
+.join-container {
+  position: relative;
+}
+.join-btn {
+  margin-top: 16px;
+}
+@media only screen and (max-width: 320px) {
+  .join-input {
+    width: 9em;
+  }
+}
+@media only screen and (min-height: 668px) {
+  .join-container {
+    height: auto;
+  }
 }
