--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,5 +1,5 @@
 /* NOTE: NavLink returns a standard <a> tag! so use the <a> tag for styling this element */
-a {
+/* a {
   font-size: 25px;
   cursor: pointer;
   margin: 0 15px;
@@ -7,6 +7,27 @@ a {
   text-decoration: none;
 }
 
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 8px;
+  background-color: #23001e;
+  height: 2.6em;
+} */
+
+/* NOTE: NavLink returns a standard <a> tag! so use the <a> tag for styling this element */
+a {
+  font-size: 25px;
+  cursor: pointer;
+  margin: 0 15px;
+  font-weight: bold;
+  text-decoration: none;
+}
 nav {
   display: flex;
   justify-content: center;
