--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,16 @@ body {
   height: 100%;
   width: 100%;
 }
+
+/* body {
+  margin: 0;
+  position: relative;
+  font-family: -apple-system, BlinkMacSystemFont, ‘Segoe UI’, ‘Roboto’, ‘Oxygen’,
+    ‘Ubuntu’, ‘Cantarell’, ‘Fira Sans’, ‘Droid Sans’, ‘Helvetica Neue’,
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #EF5B5B;
+  height: 100%;
+  width: 100%;
+} */
