--- a/src/components/JoinExistingList/JoinExistingList.css
+++ b/src/components/JoinExistingList/JoinExistingList.css
@@ -31,8 +31,8 @@
     width: 9em;
   }
 }
-@media only screen and (min-height: 668px) {
+/* @media only screen and (min-height: 668px) {
   .join-container {
     height: auto;
   }
-}
+} */
